[metadata]
name = akrophonobolos
version = 0.0.1
author = Sean Redmond
author_email = github-smr@sneakemail.com
description = Ancient Athenian acrophonic numeral converter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanredmond/Akrophonobolos
project_urls =
    Bug Tracker = https://github.com/seanredmond/Akrophonobolos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    obol = akrophonobolos.obol:main
